fix about overlaping on header

--- a/My Portfolio/Applications/Express/ToDo List/public/css/styles.css
+++ b/My Portfolio/Applications/Express/ToDo List/public/css/styles.css
@@ -94,6 +94,13 @@ input[type="text"]:focus {
 }
 
 
+/* About Section */
+.about-header{
+  position: relative;
+  z-index: -1;
+}
+
+
 
 /* Button Section */
 button {
